fixed value table alignment

--- a/resources/styles.css
+++ b/resources/styles.css
@@ -74,7 +74,6 @@ body {
   font-weight: 300;
   text-align: left;
   padding: 20px 10px;
-
 }
 
 .table > tbody > tr > td {
@@ -82,6 +81,17 @@ body {
   text-align: left;
   padding: 10px;
 }
+
+.valueTable> thead > tr > th, .valueTable> tbody > tr > td{
+  text-align: right !important;
+  width: 75px;
+}
+
+.valueTable> thead > tr > th:first-child , .valueTable> tbody > tr > td:first-child{
+  text-align: left !important;
+  width: auto !important;
+}
+
 
 .table {
   margin-top: 20px;
@@ -185,7 +195,7 @@ tr.metric .glyphicon-sort{
 }
 
 .measured .glyphicon-pencil, .forecasted .glyphicon-pencil, .yearlyBudget .glyphicon-pencil {
-  color: lightgrey;
+  color: lightgrey !important;
 }
 
 .measured .glyphicon-pencil:hover, .forecasted .glyphicon-pencil:hover, .yearlyBudget .glyphicon-pencil:hover {
